updated alignment issues.

--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ p {
 }
 
 section {
-  padding: 20px;
+  padding-top:10px;
+  padding-bottom:10px;
 }
 
 section.alternate-background {
@@ -47,8 +48,7 @@ main img {
   width:100%;
 }
 .item img{
-  width:301px;
-  height:auto;
+width:100%;
 }
 
 .item-double {
@@ -72,7 +72,7 @@ header {
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 50px;
   color: #fff;
 }
 
@@ -132,11 +132,12 @@ footer p {
 }
 
 /* -------  Media Query ------- */
-@media all and (min-width:600px){
+@media all and (min-width:480px){
  header{
   display:flex;
   justify-content: space-between;
  }
+
 .logo{
   font-size: 30px;
   margin:14px 0;
@@ -148,24 +149,28 @@ header nav{
 /*form*/
 
 form{
-  display:flex;
-  justify-content: center;
-  justify-content: space-evenly;
-  width:100%;
-  
+
+display:flex;
+gap:10px;
+
+}
+.formItem{
+  width:20%;
+  font-size:14px;
+  flex-direction:column;
+}
+form button{
+  font-size: 14px;
+}
+.buttonDiv{
+  width:fit-content;
 }
 
-form button{
-  margin-top:25px;
-  font-size: 15px;
-  
-}
 form select,
 form input{
-  margin-top:20px;
-  display:block;
-  width:85%;
+  width:90%;
 }
+
 
 .group{
  display:flex;
@@ -176,12 +181,14 @@ form input{
 
 p{
   flex:2;
+  display:inline;
 }
 #ideas img{
   width: 100%;
 }
 #about img{
   width:100%;
+  height:400px;
 }
 
 #host img{
